--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "erf.db",
   "description": "A Map-based Smartest and Fastest database module",
+  "version": "1.0.0-beta2",
   "author": "erffy",
   "type": "module",
   "private": false,
@@ -9,8 +10,9 @@
     "url": "git+https://github.com/erffy/erfdb.git"
   },
   "scripts": {
+    "preinstall": "npm install --global typescript@5.5",
+    "postinstall": "tsc",
     "start": "node src/index",
-    "build": "tsc",
     "clear": "rm -rf src"
   },
   "main": "src/index.js",
