--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@erffy/erf.db",
   "description": "A Map-based Smartest and Fastest database module",
-  "version": "14.07.2024",
+  "version": "2024.07.15-rc1",
   "author": "erffy",
   "repository": {
     "url": "git://github.com/erffy/erfdb.git"
