Update version to 2024.07.16

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "erfdb",
   "description": "A Map-based Smartest and Fastest database module",
-  "version": "2024.07.15-rc1",
+  "version": "2024.07.16",
   "author": "erffy",
   "repository": {
     "url": "git://github.com/erffy/erfdb.git"
