--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,11 @@
   },
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["ESNext", "ES7"],
-    "module": "CommonJS",
-    "moduleDetection": "force",
-    "moduleResolution": "Node",
-    "rootDir": "./lib",    
-    "outDir": "./src",
-    "baseUrl": "./",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "lib",    
+    "outDir": "src",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -20,6 +18,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "pretty": true,
+    "noEmitOnError": true,
     "resolveJsonModule": true
   },
   "exclude": [
