Update version to 2024.7.18-rc1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "erfdb",
   "description": "A Map-based Smartest and Fastest database module",
-  "version": "2024.7.17",
+  "version": "2024.7.18-rc1",
   "author": "erffy",
   "repository": {
     "url": "git://github.com/erffy/erfdb.git"
@@ -16,9 +16,9 @@
     "types": "./global.d.ts"
   },
   "dependencies": {
-    "@sapphire/shapeshift": "~4.0.0",
+    "@sapphire/shapeshift": "4.0",
     "erfevents": "github:erffy/erfevents",
-    "graceful-fs": "~4.2.11"
+    "graceful-fs": "4.2"
   },
   "peerDependencies": {
     "bson": "6.8",
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@types/graceful-fs": "latest",
     "@types/node": "latest",
-    "bson": "~6.8.0",
-    "yaml": "~2.4.5"
+    "bson": "6.8",
+    "yaml": "2.4"
   }
 }
