chore: update package.json with repository details and keywords
- Changed repository URL format to use HTTPS.
- Added bugs and homepage fields for better project visibility.
- Included relevant keywords to enhance package discoverability.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
   "version": "1.0.2",
   "author": "erffy",
   "repository": {
-    "url": "git://github.com/erffy/erfdb.git"
+    "type": "git",
+    "url": "git+https://github.com/erffy/erfdb.git"
   },
+  "bugs": {
+    "url": "https://github.com/erffy/erfdb/issues"
+  },
+  "homepage": "https://github.com/erffy/erfdb#readme",
+  "keywords": [
+    "database",
+    "db",
+    "json",
+    "yaml",
+    "bson",
+    "memory",
+    "cache",
+    "storage",
+    "key-value"
+  ],
   "scripts": {
     "postinstall": "tsc",
     "clear": "rm -rf src"
