--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   ],
   "scripts": {
     "postinstall": "tsc",
-    "clear": "rm -rf src"
+    "clear": "rm -rf src",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "main": "src/index.js",
   "exports": {
@@ -52,6 +55,7 @@
     "@types/graceful-fs": "latest",
     "@types/node": "latest",
     "bson": "6.10",
+    "jest": "^29.7.0",
     "yaml": "2.6"
   }
 }
