--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "scripts": {
     "postinstall": "tsc",
     "clear": "rm -rf src",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "mocha tests/**/*.test.ts",
+    "test:watch": "mocha tests/**/*.test.ts --watch",
+    "test:coverage": "mocha tests/**/*.test.ts --coverage"
   },
   "main": "src/index.js",
   "exports": {
@@ -52,10 +52,13 @@
     }
   },
   "devDependencies": {
+    "@types/chai": "^5.0.1",
     "@types/graceful-fs": "latest",
+    "@types/mocha": "^10.0.10",
     "@types/node": "latest",
     "bson": "6.10",
-    "jest": "^29.7.0",
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1",
     "yaml": "2.6"
   }
 }
