chore: update global type definitions, package version, and enhance Database functionality
- Removed deprecated methods sizeOf and delMany from global type definitions and Database class.
- Added new clear method to Database class for clearing all entries.
- Updated package.json to version 1.1.0 and set devDependencies to use latest versions for better compatibility.
- Improved MemoryDriver initialization to ensure file creation if it doesn't exist.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "erfdb",
   "description": "A Map-based Smartest and Fastest database module",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "erffy",
   "repository": {
     "type": "git",
@@ -52,9 +52,9 @@
     }
   },
   "devDependencies": {
-    "@types/chai": "^5.0.1",
+    "@types/chai": "latest",
     "@types/graceful-fs": "latest",
-    "@types/mocha": "^10.0.10",
+    "@types/mocha": "latest",
     "@types/node": "latest",
     "bson": "6.10",
     "chai": "^5.1.2",
