--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "dependencies": {
     "@sapphire/shapeshift": "4.0",
-    "graceful-fs": "4.2",
-    "v8": "^0.1.0"
+    "graceful-fs": "4.2"
   },
   "peerDependencies": {
     "bson": "6.10",
@@ -57,9 +56,7 @@
     "@types/node": "latest",
     "@types/tap": "latest",
     "bson": "6.10",
-    "chai": "^5.1.2",
-    "mocha": "^11.0.1",
-    "tap": "^21.0.1",
+    "tap": "21.0",
     "yaml": "2.6"
   }
 }
