chore: update package.json description for clarity and efficiency
- Revised the description of the database module to emphasize its speed and efficiency.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erfdb",
-  "description": "A Map-based Smartest and Fastest database module",
+  "description": "A Fast and Efficient Map-Based Database Module",
   "version": "1.1.0",
   "author": "erffy",
   "repository": {
