--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "erfdb",
-<<<<<<< Updated upstream
   "description": "A Fast and Efficient Map-Based Database Module",
-=======
-  "description": "Smartest and fastest Map-based database module",
->>>>>>> Stashed changes
   "version": "1.1.1",
   "author": "erffy",
   "repository": {
@@ -29,7 +25,7 @@
   "scripts": {
     "postinstall": "tsc",
     "clear": "rm -rf src",
-    "test": "tap tests/*.test.ts",
+    "test": "tap tests/**/*.test.ts",
     "test:watch": "tap tests/*.test.ts --watch",
     "test:coverage": "tap tests/*.test.ts --coverage"
   },
